--- a/mods/website/web/css/website-new.css
+++ b/mods/website/web/css/website-new.css
@@ -1482,5 +1482,5 @@ object.saito-text {
             opacity: 1;
             transform: translate(-50%, -50%) scale(1);
         }
-    }
+sudo     }
 }
