Poker: feature to auto continue

--- a/mods/poker/web/css/poker-hud.css
+++ b/mods/poker/web/css/poker-hud.css
@@ -10,6 +10,7 @@
 	justify-content: center;
 	list-style: none;
 	cursor: pointer;
+	position: relative;
 }
 
 .status ul li:hover,
@@ -17,4 +18,13 @@ option:hover {
 	background-color: #0005;
 }
 
+
+.animated_mask {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	background-color: orangered;
+	left: 0;
+}
 
