Poker: better communicate each players contribution to pot

--- a/mods/poker/web/css/poker-pot.css
+++ b/mods/poker/web/css/poker-pot.css
@@ -38,6 +38,28 @@
   font-size: 3.4rem;
 }
 
+
+/*  Details overlay */
+.pot-details-overlay {
+    min-width: 38rem;
+    max-width: 100vw;
+    padding: 1rem;
+}
+
+.pot-details-overlay .saito-table-row {
+    grid-template-columns: 1fr 1fr min-content;
+    margin: 1rem 0;
+    align-items: center;
+}
+
+.pot-details-overlay .player-name {
+    font-size: 1.8rem;
+}
+
+.pot-details-overlay .player-bet {
+    font-size: 2rem;    
+}
+
 @media screen and (max-width: 1000px) {
   .pot {
     width: 25rem;
