--- a/mods/poker/web/css/poker-base.css
+++ b/mods/poker/web/css/poker-base.css
@@ -40,6 +40,7 @@ body {
   max-height: 36vh;
   left: calc(50% - 125px);
   bottom: 10px;
+  max-width: min(250px, 66vw);
 }
 
 
@@ -82,5 +83,9 @@ body {
 @media screen and (max-width: 600px) {
   .gameboard {
     padding: 2rem;
+  }
+
+  .mystuff {
+    left: calc(50vw - min(125px, 33vw));
   }
 }
