card display cleaned up

--- a/mods/settlers/web/css/settlers-build.css
+++ b/mods/settlers/web/css/settlers-build.css
@@ -21,7 +21,6 @@
 	gap: 1rem;
 	font-size: 2rem;
 	overflow: hidden auto;
-	posiiton: relative;
 	margin-bottom: 0rem;
 	position: relative;
 	padding: 0.2rem;
@@ -255,10 +254,10 @@
 
 .settlers-dev-card {
 	position: relative;
-	width: min(26rem, 35vw);
-	height: calc(min(26rem, 35vw) * 1.4);
+	width: 26rem;
 	z-index: 1;
 	cursor: pointer;
+	aspect-ratio: 404/566;
 }
 
 .settlers-dev-card:not(.settlers-card-disabled):hover {
@@ -267,16 +266,15 @@
 }
 
 .settlers-dev-card-title {
-	font-size: 18px;
+	font-size: 17px;
 	font-weight: bold;
-	width: 100%;
 	z-index: 2;
 	display: flex;
 	position: absolute;
 	height: 2rem;
 	pointer-events: none;
 	text-transform: uppercase;
-	bottom: min(3.95rem, 5.5vw);
+	bottom: 13%;
 	width: 100%;
 	align-items: center;
 	justify-content: center;
@@ -297,11 +295,11 @@
 	justify-content: center;
 	align-items: center;
 	pointer-events: none;
-	bottom: min(2.6rem, 3.5vw);
+	bottom: 9%;
 }
 
 .settlers-dev-card img {
-	position: absolute;
+	position: relative;
 	top: 0rem;
 	left: 0rem;
 	z-index: 0;
@@ -437,16 +435,4 @@
 		flex-wrap: wrap;
 	}
 
-	.settlers-dev-card {
-		width: 26rem;
-		height: calc(26rem * 1.4);
-	}
-
-	.settlers-dev-card .settlers-dev-card-title {
-		bottom: 4.25rem;
-	}
-
-	.settlers-dev-card .settlers-dev-card-text {
-		bottom: 2.6rem;
-	}
 }
