--- a/web/saito/css-imports/game-animations.css
+++ b/web/saito/css-imports/game-animations.css
@@ -58,3 +58,13 @@
 .copied_elem {
   visibility: hidden;
 }
+
+/* For sliding color bar on a clickable option*/
+.animated-mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-color: orangered;
+  left: 0;
+}
