--- a/web/saito/css-imports/saito-module.css
+++ b/web/saito/css-imports/saito-module.css
@@ -164,6 +164,10 @@ fieldset.saito-grid > fieldset.saito-grid{
   grid-column-end: span 2;
 }
 
+fieldset.saito-grid .note {
+    margin-left: 5px;
+}
+
 .saito-module-settings .note {
     font-style: italic;
 }
