display player pot in poker

--- a/mods/poker/web/css/poker-playerbox.css
+++ b/mods/poker/web/css/poker-playerbox.css
@@ -80,10 +80,36 @@
 }
 
 
+.poker-player-stake {
+	font-size: 14px;
+	position: absolute;
+	top: calc(100% + 2px);
+	left: 50%;
+	transform: translateX(-50%);
+	border-radius: 100%;
+	color: #fff;
+	background-color: #dd5500;
+	text-shadow: 1px 1px 3px black;
+	height: 4rem;
+	width: 4rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.game-playerbox-seat-1 .poker-player-stake{
+	left: unset;
+	transform: unset;
+	top: unset;
+	bottom: calc(100% + 2px);
+	right: 2px;
+}
+
 .plog-update, .status {
 	width: 100%;
 	text-align: center;
 	margin-top: 0.5rem;
+	cursor: default;
 }
 
 
