--- a/mods/poker/web/css/poker-base.css
+++ b/mods/poker/web/css/poker-base.css
@@ -9,7 +9,6 @@ body {
 
 .gameboard {
   position: absolute;
-  background-image: url(/saito/img/arcade/greenfelt.jpg);
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -19,6 +18,10 @@ body {
   align-items: center;
   justify-content: space-around;
   padding: 4rem;
+  /* To adjust shade of felt */
+  background-color: #0091;
+  background-image: url(/saito/img/arcade/greenfelt.jpg);
+  background-blend-mode: luminosity;
 }
 
 .gameboard.threed {
@@ -62,16 +65,30 @@ body {
 }
 
 .dealer-button {
-  width: 5rem;
-  height: 5rem;
-  border: 1px solid white;
+  width: 4.5rem;
+  height: 4.5rem;
+  border: 2px ridge #999;
   border-radius: 100%;
   overflow: hidden;
-  background-image: url('/saito/img/arcade/cards/red_back.png');
+  /*background-image: url('/saito/img/arcade/cards/red_back.png');
   background-size: 169%;
   background-position: center;
+  background-blend-mode: color;*/
+  background-color: #FEE;
   position: absolute;
   right: calc(100% + 5px);
+  top: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  font-size: 3rem;
+  text-shadow: -1px -1px rgba(0,0,0,0.4), 1px 1px rgba(255,255,255,0.8);
+  color: rgba(0, 0, 0, 0.6);
+  padding-left: 2px;
+  font-weight: bolder;
+  font-family: "Times New Roman", serif;
+  cursor: default;
 }
 
 @media screen and (max-width: 900px) {
