--- a/mods/settlers/web/css/settlers-hud.css
+++ b/mods/settlers/web/css/settlers-hud.css
@@ -22,13 +22,6 @@
 }
 
 
-.hud-notice {
-  border: 3px solid #424143;
-  background-color: #b79e76;
-  border-radius: 1rem 1rem 0 0;
-}
-
-
 
 /* override default #efefef background */
 
@@ -41,7 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0.5rem 0 0.5rem 2rem;
+    padding: 0.5rem 0.4rem 0.5rem 1.6rem;
     gap: 0.75rem;
 }
 
